kubernetes/media/musicbot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicbot
  labels:
    run: musicbot
spec:
  replicas: 0
  selector:
    matchLabels:
      run: musicbot
  template:
    metadata:
      labels:
        run: musicbot
    spec:
      containers:
      - name: musicbot
        image: ghcr.io/museofficial/muse:pr-1256
        imagePullPolicy: Always
        resources:
          requests:
            memory: "400Mi"
            cpu: 500m
          limits:
            memory: "400Mi"
            cpu: 500m
        #volumeMounts:
        #- mountPath: "/app/config.txt"
        #  subPath: "config.txt"
        #  readOnly: true
        #  name: musicbot-config
      #volumes:
      #- name: musicbot-config
      #  secret:
      #    secretName: musicbot-config
