kubernetes/media/hortusfox.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hortusfox
  labels:
    app: hortusfox
spec:
  replicas: 1
  serviceName: "hortusfox"
  selector:
    matchLabels:
      app: hortusfox
  template:
    metadata:
      labels:
        app: hortusfox
    spec:
      containers:
        - name: hortusfox
          image: ghcr.io/danielbrendel/hortusfox-web:v5.4
          imagePullPolicy: Always
          resources:
            requests:
              memory: "400Mi"
              cpu: 500m
            limits:
              memory: "400Mi"
              cpu: 500m
          ports:
            - containerPort: 80
              name: ui
          volumeMounts:
            - mountPath: /var/www/html/public/img
              name: hortusfox-data
              subPath: img
            - mountPath: /var/www/html/app/logs
              name: hortusfox-data
              subPath: logs
            - mountPath: /var/www/html/public/backup
              name: hortusfox-data
              subPath: backup
            - mountPath: /var/www/html/public/themes
              name: hortusfox-data
              subPath: themes
            - mountPath: /var/www/html/app/migrations
              name: hortusfox-data
              subPath: migrations
        - name: hortusfox-mariadb
          image: mariadb:lts
          imagePullPolicy: Always
          resources:
            requests:
              memory: "400Mi"
              cpu: 500m
            limits:
              memory: "400Mi"
              cpu: 500m
          ports:
            - containerPort: 3306
              name: db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: hortusfox-data
              subPath: database
  volumeClaimTemplates:
    - metadata:
        name: hortusfox-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: freenas-iscsi-csi
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: hortusfox
spec:
  selector:
    app: hortusfox
  ports:
    - name: ui
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hortusfox
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`hortusfox.eniworks.net`)
    kind: Rule
    services:
    - name: hortusfox
      port: 80
      passHostHeader: true
