kubernetes/media/synclounge.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synclounge
  labels:
    run: synclounge
spec:
  replicas: 1
  selector:
    matchLabels:
      run: synclounge
  template:
    metadata:
      labels:
        run: synclounge
    spec:
      containers:
      - name: synclounge
        image: synclounge/synclounge:5.2.34
        imagePullPolicy: Always
        ports:
        - containerPort: 8088
        resources:
          requests:
            memory: "1Gi"
            cpu: 2
          limits:
            memory: "2Gi"
            cpu: 4
        livenessProbe:
          httpGet:
            path: /health
            port: 8088
          initialDelaySeconds: 600
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8088
          initialDelaySeconds: 60
          periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: synclounge
spec:
  selector:
    run: synclounge
  ports:
    - name: ui-port
      protocol: TCP
      port: 8088
      targetPort: 8088
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: synclounge
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`synclounge.eniworks.net`)
    kind: Rule
    services:
    - name: synclounge
      port: 8088
      passHostHeader: true
