kubernetes/media/tandoor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes
  labels:
    app: recipes
    environment: production
    tier: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: recipes
      environment: production
  template:
    metadata:
      annotations:
        backup.velero.io/backup-volumes: media,static
      labels:
        app: recipes
        tier: frontend
        environment: production
    spec:
      restartPolicy: Always
      #serviceAccount: recipes
      #serviceAccountName: recipes
      containers:
      - name: recipes-nginx
        image: nginx:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
            name: http
          - containerPort: 8080
            protocol: TCP
            name: gunicorn
        resources:
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
          - mountPath: /media
            name: media
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
          - mountPath: /static
            name: static
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
          - name: nginx-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx-config
            readOnly: true
      - name: recipes
        image: vabene1111/recipes
        imagePullPolicy: Always
        command:
          - /opt/recipes/venv/bin/gunicorn
          - -b
          - :8080
          - --access-logfile
          - "-"
          - --error-logfile
          - "-"
          - --log-level
          - INFO
          - recipes.wsgi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 60
          timeoutSeconds: 60
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 60
          timeoutSeconds: 60
          failureThreshold: 10
        resources:
          limits:
            cpu: 600m
            memory: 512Mi
          requests:
            cpu: 600m
            memory: 512Mi
        volumeMounts:
          - mountPath: /opt/recipes/mediafiles
            name: media
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
          - mountPath: /opt/recipes/staticfiles
            name: static
            # mount as subPath due to lost+found on ext4 pvc
            subPath: files
        securityContext:
          runAsUser: 65534
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: recipes-media
        - name: static
          persistentVolumeClaim:
            claimName: recipes-static
        - name: nginx-config
          configMap:
            name: recipes-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  labels:
    app: recipes
    tier: frontend
spec:
  selector:
    app: recipes
    tier: frontend
    environment: production
  ports:
  - port: 80
    targetPort: http
    name: http
    protocol: TCP
  - port: 8080
    targetPort: gunicorn
    name: gunicorn
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recipes
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`recipes.eniworks.net`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: recipes
      port: 8080
      passHostHeader: true
  - match: Host(`recipes.eniworks.net`) && PathPrefix(`/media`)
    kind: Rule
    services:
    - name: recipes
      port: 80
      passHostHeader: true
  - match: Host(`recipes.eniworks.net`) && PathPrefix(`/static`)
    kind: Rule
    services:
    - name: recipes
      port: 80
      passHostHeader: true
