kubernetes/media/wiki-mirror.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wiki-mirror
  labels:
    app: wiki-mirror
spec:
  replicas: 1
  serviceName: "wiki-mirror"
  selector:
    matchLabels:
      app: wiki-mirror
  template:
    metadata:
      labels:
        app: wiki-mirror
    spec:
      containers:
        - name: wiki-mirror
          image: ghcr.io/kiwix/kiwix-serve:3.8.1
          args:
            - --address ipv4
            - allthetropes_en_all_maxi_2020-11.zim
            - westeros_en_all_2018-10.zim
            - wikem_en_all_maxi_2021-02.zim
            - wikibooks_en_all_maxi_2021-03.zim
            - wikinews_en_all_maxi_2023-01.zim
            - wikipedia_en_all_maxi_2022-05.zim
            - wikiquote_en_all_maxi_2022-12.zim
            - wikisource_en_all_maxi_2022-09.zim
            - wikispecies_en_all_maxi_2023-01.zim
            - wikiversity_en_all_maxi_2021-03.zim
            - wikivoyage_en_all_maxi_2023-01.zim
            - wikiwel_en_all_maxi_2018-10.zim
          imagePullPolicy: Always 
          ports:
            - containerPort: 8080
              name: ui
          volumeMounts:
            - mountPath: /data
              name: wiki-mirror-data
  volumeClaimTemplates:
  - metadata:
      name: wiki-mirror-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "nfs-client"
      resources:
        requests:
          storage: 100Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wiki-mirror
spec:
  selector:
    app: wiki-mirror
  ports:
    - name: ui
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wiki-mirror
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`wikipedia.eniworks.net`)
    kind: Rule
    services:
    - name: wiki-mirror
      port: 8080
      passHostHeader: true
